fix: docs generating causing errors + refacto services
