# app/controllers/games_controller.ts
@@ -1,20 +1,23 @@
-// import type { HttpContext } from '@adonisjs/core/http'
-
 import Player from "#models/player";
-import GameService from "#services/game_service";
-import { firebaseService, gameServices } from "#start/kernel";
 import { HttpContext } from "@adonisjs/core/http";
 import { Timestamp } from "firebase-admin/firestore";
+import Game from "#models/game";
+import app from '@adonisjs/core/services/app';
 
 export default class GamesController {
   /**
    * @create
    * @description Create a new game in database
-   * @method POST
-   * @responseHeader 200 {string} content-type application/json 
+   * @method Post
+   * @requestBody {"gameCode": "123456", "playerId": "2pUYxkCWhjXuygSnq7wD", "pseudo": "Bombastic"}
+   * @responseBody 200 - {"status": 200, "message": "Partie créée !"}
+   * @responseBody 500 - {"status": 500, "message": "Ce code de partie est déjà utilisé...", "action": "regenerate"}
    */
   async create({ request, response }: HttpContext) {
     const body = request.body()
+    const firebaseService = await app.container.make('firebaseService')
+    const gamesService = await app.container.make('gamesService')
+    
     const gameRef = firebaseService.db().collection("games").doc(body.gameCode)
     const currentGameRef = firebaseService.db().collection('currentGames')
 
@@ -33,7 +36,7 @@ export default class GamesController {
             index: 0
           }).then(() => {
             currentGameRef.doc(body.gameCode).set({})
-            gameServices.set(body.gameCode, new GameService(body.gameCode))
+            gamesService.games.set(body.gameCode, new Game(body.gameCode, firebaseService))
             response.status(200).json({ status: 200, message: 'Partie créée !' })
           }).then(() => {
             gameRef.collection('turns').doc('1').set({
@@ -52,9 +55,14 @@ export default class GamesController {
    * @join
    * @description Join a game
    * @method POST
-   * @responseHeader 200 {string} content-type application/json 
+   * @requestBody {"gameCode": "123456", "pseudo": "Bombastic"}
+   * @responseBody 200 - { "status": 200, "message": "Joueur ajouté à la partie !", "playerId": "2pUYxkCWhjXuygSnq7wD" } 
+   * @responseBody 404 - { "status": 404, "message": "Cette partie n'existe pas..." }
+   * @responseBody 500 - { "status": 500, "message": "Veuillez renseigner un code de partie et un pseudo" }
    */
   async join({ request, response }: HttpContext) {
+    const firebaseService = await app.container.make('firebaseService')
+    const gamesService = await app.container.make('gamesService')
     const body = request.body()
 
     if (body.gameCode === undefined || body.gameCode === '' || body.pseudo === undefined || body.pseudo === '') {
@@ -73,10 +81,10 @@ export default class GamesController {
           pseudo: body.pseudo,
           current: false,
           main: false,
-          index: gameServices.get(body.gameCode)?.players.length
+          index: gamesService.games.get(body.gameCode)?.players.length
         }).then((player) => {
           player.update({ uid: player.id })
-          gameServices.get(body.gameCode)?.players.push(new Player(player.id, body.pseudo, false, gameServices.get(body.gameCode)!.players.length))
+          gamesService.games.get(body.gameCode)?.players.push(new Player(player.id, body.pseudo, false, gamesService.games.get(body.gameCode)!.players.length))
           response.status(200).json({ status: 200, message: 'Joueur ajouté à la partie !', playerId: player.id })
         })
       })
@@ -86,9 +94,10 @@ export default class GamesController {
    * @start
    * @description Start a game
    * @method POST
-   * @responseHeader 200 {string} content-type application/json 
+   * @responseBody 200 - { "status": 200, "message": "Partie démarrée !" } 
    */
   async start({ request, response }: HttpContext) {
+    const firebaseService = await app.container.make('firebaseService')
     const body = request.body()
     
     return firebaseService.db().collection('games').doc(body.gameCode).update({
@@ -98,12 +107,21 @@ export default class GamesController {
     })
   }
 
+  /**
+   * @reset
+   * @description Reset a game
+   * @method GET
+   * @paramPath gameCode - Game code to reset
+   */
   async reset({ params }: HttpContext) {
-    gameServices.set(params.gameCode, new GameService(params.gameCode))
+    const firebaseService = await app.container.make('firebaseService')
+    const gamesService = await app.container.make('gamesService')
+
+    gamesService.games.set(params.gameCode, new Game(params.gameCode, firebaseService))
     setTimeout(() => {
-      gameServices.get(params.gameCode)!.game!.currentPlayer = gameServices.get(params.gameCode)!.players[3]
-      gameServices.get(params.gameCode)!.game!.currentPlayerIndex = 3
+      gamesService.games.get(params.gameCode)!.currentPlayer = gamesService.games.get(params.gameCode)!.players[3]
+      gamesService.games.get(params.gameCode)!.currentPlayerIndex = 3
     }, 4000)
-    // gameServices[0].init()
+    // this.gamesService.games[0].init()
   }
 }
