# app/models/game.ts
@@ -1,70 +1,102 @@
+import FirebaseService from '#services/firebase_service';
+import { HttpContext } from '@adonisjs/core/http';
 import Player from "./player.js";
 import Post from "./post.js";
+import { DocumentSnapshot } from 'firebase-admin/firestore';
+import { inject } from '@adonisjs/core';
 
+@inject()
 export default class Game {
   currentTurn: number;
-  currentPlayer: Player;
+  currentPlayer?: Player;
   currentPlayerIndex: number = 0;
   currentTurnPosts: Array<Post>;
   reputationTitle?: Player;
   moneyTitle?: Player;
   followersTitle?: Player;
+  gameCode: string;
+  players: any[] = [];
 
-  constructor(currentPlayer: Player) {
+  constructor(gameCode: string, protected firebaseService: FirebaseService) {
     this.currentTurn = 0;
-    this.currentPlayer = currentPlayer;
     this.currentTurnPosts = [];
+    this.gameCode = gameCode;
+
+    firebaseService.db().collection(`games/${this.gameCode}/players`).get()
+      .then((players) => {
+        players.docs.map((player) => {
+          const data = player.data()
+          this.players.push(new Player(player.id, data.pseudo, data.main, data.index))
+        })
+
+        // this.players = players.docs.map((player) => {
+        //   const data = player.data()
+        //   return new Player(player.id, data.pseudo, data.main)
+        // })
+        this.init()
+      })
+      .catch((error) => {
+        return error
+      })
   }
 
-  // public getCurrentTurn(): number {
-  //   return this.currentTurn;
-  // }
+  public init() {
+    this.currentPlayer = this.players.find((player) => player.main)
+    this.firebaseService.db().collection('games').doc(`${this.gameCode}`).onSnapshot((game: DocumentSnapshot) => {
+      if (game.data()?.ready) {
+        console.log(`GAME-SERVICE ${this.gameCode}: Game is ready`);
 
-  // public getCurrentPlayer(): Player {
-  //   return this.currentPlayer;
-  // }
+        this.newTurn()
+      }
+    })
+  }
 
-  // public getCurrentTurnPosts(): Array<Post> {
-  //   return this.currentTurnPosts;
-  // }
+  async newTurn() {
+    this.currentTurn += 1;
 
-  // public getReputationTitle(): Player | undefined {
-  //   return this.reputationTitle;
-  // }
+    this.firebaseService.db().collection(`games/${this.gameCode}/players`).doc(this.currentPlayer!.uid).update({
+      current: true
+    }).then(() => {
+      console.log(`GAME-SERVICE ${this.gameCode} : New turn ${this.currentTurn} started by ${this.currentPlayer!.pseudo}`)
 
-  // public getMoneyTitle(): Player | undefined {
-  //   return this.moneyTitle;
-  // }
+    })
+    // this.firebaseService.db().collection(`games/${this.gameCode}/turns/${this.game.currentTurn}/posts`).doc(this.game.currentPlayer.uid).onSnapshot((post) => {
+    //   // Card was scanned by the player
+    //   // this.game?.currentTurnPosts.push()
+    // })
+  }
 
-  // public getFollowersTitle(): Player | undefined {
-  //   return this.followersTitle;
-  // }
+  async nextPlayer({ response }: HttpContext) {
+    console.log(this.currentPlayerIndex, this.players.length);
 
-  // public setCurrentTurn(currentTurn: number): void {
-  //   this.currentTurn = currentTurn;
-  // }
+    if (this.currentPlayerIndex === this.players.length - 1) {
+      return this.firebaseService.db().collection(`games/${this.gameCode}/players`).doc(this.players[this.currentPlayerIndex].uid).update({
+        current: false
+      }).then(() => {
+        return this.firebaseService.db().collection(`games/${this.gameCode}/turns`).doc(this.currentTurn.toString()).update({
+          miniGameReady: true
+        })
+      })
 
-  // public setCurrentPlayer(currentPlayer: Player): void {
-  //   this.currentPlayer = currentPlayer;
-  // }
+    } else {
+      return this.firebaseService.db().collection(`games/${this.gameCode}/players`).doc(this.currentPlayer!.uid).update({
+        current: false
+      }).then(async () => {
+        this.currentPlayerIndex += 1;
 
-  // public setCurrentTurnPosts(currentTurnPosts: Array<Post>): void {
-  //   this.currentTurnPosts = currentTurnPosts;
-  // }
+        return this.firebaseService.db().collection(`games/${this.gameCode}/players`).doc(this.players.find((player) => player.index === this.currentPlayerIndex).uid).update({
+          current: true
+        }).then(() => {
+          this.currentPlayer = this.players[this.currentPlayerIndex];
 
-  // public setReputationTitle(reputationTitle: Player): void {
-  //   this.reputationTitle = reputationTitle;
-  // }
+          console.log('GAME-SERVICE: Next player is ', this.currentPlayer!.pseudo);
 
-  // public setMoneyTitle(moneyTitle: Player): void {
-  //   this.moneyTitle = moneyTitle;
-  // }
-
-  // public setFollowersTitle(followersTitle: Player): void {
-  //   this.followersTitle = followersTitle;
-  // }
-
-  // public addPost(post: Post): void {
-  //   this.currentTurnPosts.push(post);
-  // }
+          return response.status(200).json({ status: 200, message: "Joueur suivant !" })
+        })
+          .catch((error: Error) => {
+            console.log(error);
+          })
+      })
+    }
+  }
 }
